# yymicros

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md  README_ARCEOS.md  build.rs  env.sh  total_lines.sh
api/arceos_api/src/imp/: task.rs
api/arceos_posix_api/src/: ctypes_gen.rs
api/axfeat/: Cargo.toml
api/linux_syscall_api/: Cargo.toml
api/linux_syscall_api/src/: api.rs  ctypes.rs  syscall.rs
api/linux_syscall_api/src/syscall_fs/: mod.rs
api/linux_syscall_api/src/syscall_fs/ctype/: dir.rs  epoll.rs  eventfd.rs  file.rs  mount.rs  pipe.rs
api/linux_syscall_api/src/syscall_fs/imp/: ctl.rs  io.rs  link.rs  poll.rs  stat.rs
api/linux_syscall_api/src/syscall_mem/: imp.rs  mod.rs
api/linux_syscall_api/src/syscall_task/: mod.rs  task_syscall_id.rs
api/linux_syscall_api/src/syscall_task/imp/: futex.rs  schedule.rs  task.rs
apps/c/arch_prctl/: arch_prctl_test.c
apps/c/futex/: futex.c
crates/kernel_guard/: Cargo.toml
crates/kernel_guard/src/: lib.rs
crates/lab_allocator/: Cargo.toml
crates/lab_allocator/src/: lib.rs  slab.rs  tlsf.rs
crates/new_slab_allocator/: Cargo.toml
crates/new_slab_allocator/src/: lib.rs  slab.rs  tlsf.rs
crates/taskctx/: Cargo.toml
crates/taskctx/src/: current.rs  kstack.rs  lib.rs  stat.rs  task.rs  tls.rs
crates/taskctx/src/arch/: aarch64.rs  riscv.rs  x86_64.rs
doc/: README.md
doc/OS-Train-Repo/: REPORT.md  Week1.md  Week2.md  Week3.md  Week4.md  Week5.md  Week6.md  Week7.md  Week8.md  中期报告.md
doc/OSCOMP-Repo/: Week 9.md  Week10.md  Week12.md  Week13.md  Week14.md  Week15.md
doc/Starry/: mkdocs.yml
doc/Starry/docs/: index.md  问题与解决.md
doc/Starry/docs/实现重点/: 依赖问题.md  兼容问题.md  宏内核化探讨.md
doc/Starry/docs/架构设计/: ArceOS介绍.md  Starry结构说明.md
doc/Starry/docs/模块介绍/: 任务调度模块-axtask.md  信号模块-axsignal.md  内存管理模块-axmem.md  内核底层模块-axhal.md  内核运行时模块-axruntime.md  宏内核用户库-starry.md  文件系统模块-axfs.md  网络模块-axnet.md  进程控制模块-axprocess.md
doc/Starry/site/模块介绍/assets/: signal.png:Zone.Identifier
doc/axalloc_doc/: lib.md  page.md
doc/axhal_doc/: bootstrap.md  trap.md
entry/arch_boot/: Cargo.toml  build.rs
entry/arch_boot/src/: alloc.rs  lib.rs  mp.rs
entry/arch_boot/src/platform/: mod.rs
entry/arch_boot/src/platform/aarch64_common/: boot.rs  mod.rs  mp.rs
entry/arch_boot/src/platform/riscv64_qemu_virt/: boot.rs  mod.rs
entry/arch_boot/src/platform/x86_pc/: mod.rs
entry/axtrap/: Cargo.toml
entry/axtrap/src/arch/aarch64/: trap.rs
entry/axtrap/src/arch/riscv/: mod.rs
entry/axtrap/src/arch/x86_64/: mod.rs  syscall.rs
kernel/: main.c  start.c
kernel/yymicros/: Cargo.toml  Makefile
kernel/yymicros/src/: config.rs  console.rs  entry.S  linker.ld  main.rs  panic.rs  sbi.rs  sync.rs  utils.rs
kernel/yymicros/src/fs/: fatfs.rs  mod.rs
kernel/yymicros/src/process/: mod.rs
kernel/yymicros/src/syscall/: fs.rs  mod.rs  process.rs
kernel/yymicros/src/trap/: context.rs  mod.rs
modules/axfs/: Cargo.toml
modules/axfs/src/: mounts.rs
modules/axhal/: Cargo.toml
modules/axhal/src/: lib.rs
modules/axhal/src/arch/aarch64/: context.rs
modules/axhal/src/arch/riscv/: context.rs  mod.rs
modules/axhal/src/arch/x86_64/: context.rs
modules/axhal/src/platform/: mod.rs
modules/axhal/src/platform/aarch64_common/: mem.rs  mod.rs
modules/axhal/src/platform/x86_pc/: time.rs
modules/axmem/src/: lib.rs
modules/axnet/src/: lib.rs
modules/axprocess/: Cargo.toml
modules/axprocess/src/: api.rs  link.rs  process.rs  signal.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lib.rs
modules/axsignal/: Cargo.toml
modules/axtask/: Cargo.toml
modules/axtask/src/: api.rs  lib.rs  run_queue.rs  schedule.rs  task.rs  timers.rs  wait_queue.rs
os/: Cargo.toml  build.rs
os/src/: config.rs  entry.asm  loader.rs  main.rs  sbi.rs  time.rs
os/src/boards/: qemu.rs
os/src/driver/: mod.rs
os/src/driver/block/: virtio_blk.rs  virtio_gpu.rs
os/src/embassy/: mod.rs
os/src/embassy/futures/: fmt.rs  mod.rs  select.rs
os/src/embassy/runtime/: call.S  green_thread.rs  mod.rs
os/src/mem/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/process/: context.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  stride.rs  switch.S  switch.rs  thread.rs
os/src/sync/: condvar.rs  lazy_init.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs  thread.rs
os/src/task/: context.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  stride.rs  switch.rs  task.rs  thread.rs
os/src/trap/: mod.rs
os/src/vfs/: device.rs  fat.rs  fs.rs  inode.rs  macros.rs  mod.rs  pipe.rs
os/src/vfs/fs/: ext4.rs  fat.rs  mod.rs
os/src/vfs/os/: console.rs  inode.rs  mod.rs  structs.rs
riscv-syscalls-testing/: .gitignore
riscv-syscalls-testing/user/: CMakeLists.txt
riscv-syscalls-testing/user-old/: compile.sh
riscv-syscalls-testing/user-old/src/: cat.c  hello.c  shell.c  syscall_test.h
riscv-syscalls-testing/user/include/: string.h  unistd.h
riscv-syscalls-testing/user/lib/: syscall.c
riscv-syscalls-testing/user/src/oscomp/: brk.c  build-single-testcase.sh  clone.c
src/: config.rs  console.rs  linker.ld  loader.rs  main.rs  panic.rs  sbi.rs  sync.rs  time.rs
src/driver/: console.rs  mod.rs
src/driver/block/: mod.rs  virtio_blk.rs  virtio_gpu.rs
src/mem/: frame_allocator.rs  memory_set.rs  mod.rs  page_table.rs
src/syscall/: fs.rs  process.rs
src/task/: id.rs  manager.rs  mod.rs  stride.rs  task.rs
src/vfs/: device.rs  err.rs  fat.rs  macros.rs  mod.rs  paths.rs  structs.rs
testcases/testsuits-x86_64-linux-musl/: fstatat  fstatat.c  readlink_localtime  readlink_localtime.c  real_time  real_time.c
ulib/axlibc/: Cargo.toml
ulib/axstarry/: Cargo.toml
ulib/axstarry/src/: api.rs  file.rs  lib.rs
ulib/axstd/: Cargo.toml
user/: compile.sh
user/src/: cat.s  fork.c  fork_syscall.c  hello_syscall.c  shell_syscall.c  syscall_test.h
xv6-user/: init.c  sh.c  usys.S
