[package]
name = "lab_allocator"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["tlsf", "bitmap"] }
rlsf = "0.2.0"
slab_allocator = { path = "../new_slab_allocator" }
kspin = "0.1"
spin = "0.7.1"
