[package]
name = "yymicros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false }
