[package]
name = "axstarry"
version = "0.1.0"
edition = "2021"

authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
description = "ArceOS user program library for linux apps with posix_syscall"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["monolithic"]

monolithic = ["axfeat/monolithic", "paging", "fs", "multitask", "irq", "net"]

alloc = ["axfeat/alloc"]

img = ["axfeat/img"]

# Multicore
smp = ["axfeat/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd"]

# Interrupts
irq = ["axfeat/irq"]

# Memory
paging = ["axfeat/paging"]
tls = ["axfeat/tls"]

# Multi-threading and scheduler
multitask = ["axfeat/multitask"]
sched_fifo = ["axfeat/sched_fifo"]
sched_rr = ["axfeat/sched_rr"]
sched_cfs = ["axfeat/sched_cfs"]

# Display
display = ["axfeat/display"]

# Bus-Pci
bus-pci = ["axfeat/bus-pci"]

# Fs
fs = ["axfeat/fs"]
fatfs = ["axfeat/fatfs"]
ext4fs = ["axfeat/ext4fs", "axlibc/fs"]
myfs = ["axfeat/myfs"]
devfs = []

# Network
net = ["axfeat/net", "linux_syscall_api/net"]

# Logging
log-level-off = ["axfeat/log-level-off"]
log-level-error = ["axfeat/log-level-error"]
log-level-warn = ["axfeat/log-level-warn"]
log-level-info = ["axfeat/log-level-info"]
log-level-debug = ["axfeat/log-level-debug"]
log-level-trace = ["axfeat/log-level-trace"]

[dependencies]
linux_syscall_api = { path = "../../api/linux_syscall_api" }
axfeat = { path = "../../api/axfeat" }
axlibc = { path = "../axlibc", optional = true }
axlog = { path = "../../modules/axlog" }
arch_boot = { path = "../../entry/arch_boot" }